fix gap at the bottom for videos

--- a/style.css
+++ b/style.css
@@ -318,9 +318,16 @@ main { overflow-x: hidden; }
             .project-card:is(:hover, :focus) .publish-date { transition-delay: 0.1s; }
 /* .load-more{ font-size: var(--fs-4); color: var(--raw-seinna); text-decoration: underline; margin-inline: auto; } */
 
-.card-banner img {
+.card-banner {
+    overflow: hidden;
+}
+
+.card-banner img,
+.card-banner video {
     width: 100%;
-    height: auto; /* Maintain aspect ratio */
+    height: 100%;
+    object-fit: cover; /* makes everything same shape */
+    display: block;
 }
 
 .hidden-project {
